<resources>
    <string name="app_name">AndroidFinalProject</string>
    <string name="cbcAppName">CBC News App</string>
    <string name="foodAppName">Food Nutrition App</string>
    <string name="getNews">Get Top News Stories</string>
    <string name="ocTranspoAppName">OC Transpo</string>
    <string name="ocTranspoSnackBar">OC Transpo</string>
    <string name="clickStartRouteToBegin">Click Start Route to begin!</string>
    <string name="startRouteButton">Start Route</string>
    <string name="startRouteButtonToastMessage">Moving to saved stops</string>
    <string name="busStopsButtonString">ENTER ROUTE NUMBER</string>
    <string name="editTextBusStopsHint">Enter Route Number</string>
    <string name="busNumberAndDirection">BusNumber / Direction</string>
    <string name="routeNumber">Selected Route</string>
    <string name="routeSelectedToastMessage">Route Selected</string>
    <string name="noInformationFoundToastMessage">No Available Information</string>
    <string name="deleteBusStopContinue">Continue</string>
    <string name="deleteBusStopCancel">Cancel</string>
    <string name="stopAddedToast">Stop Added!</string>
    <string name="savedRoutes">Saved Routes</string>
    <string name="closeToast">CLOSE</string>
    <string name="deleteBusStop">Delete route</string>
    <string name="routeDeleted"> Route Deleted</string>
    <string name="deleteOrContinueDialog">"Click continue to view route information or delete stop as desired?"</string>
    <string name="ocTranspoBusStopsName">Bus Stops</string>
    <string name="imageCloseButton">Close</string>
    <string name="helpTitle">Aidez-moi</string>
    <string name="helpMessage">Author: Chad Souster\nVersion 2.0\n Application Description: Click on Start Route, enter your desired bus stop number, then click desired bus number to get bus details</string>
    <string name="helpNeutralButton">Close</string>
    <string name="menu_btn_help">Help</string>
    <string name="search_for_a_food">Search for a Food</string>
    <string name="search">Search</string>
    <string name="cant_do_blank_search">Cannot search for nothing</string>
    <string name="food_search_help_title">Food Search Help</string>
    <string name="okay_long">Okay</string>
    <string name="okay_short">Ok</string>
    <string name="enerc_kcal">Energy (kCal)</string>
    <string name="kcal">Kilocalorie</string>
    <string name="kcal_plural">Kilocalories</string>
    <string name="procnt">Protein</string>
    <string name="procnt_plural">Proteins</string>
    <string name="fat">Fat</string>
    <string name="fat_plural">Fats</string>
    <string name="chocdf">Carbohydrate</string>
    <string name="chocdf_plural">Carbohydrates</string>
    <string name="fibtg">Fibre</string>
    <string name="fibtg_plural">Fibres</string>
    <string name="nutrient">Nutrient</string>
    <string name="nutrient_plural">Nutrients</string>
    <string name="brand">Brand</string>
    <string name="category">Category</string>
    <string name="contents">Contents</string>
    <string name="load_more_items">Load more items</string>
    <string name="no_more_items">No more items to load</string>
    <string name="favourite">Favourite</string>
    <string name="favourite_plural">Favourites</string>
    <string name="added_to_fav">Added as favourite</string>
    <string name="removed_from_fav">Removed from favourites</string>
    <string name="cbcFragSaveBtn">SAVE STORY</string>
    <string name="cbcFragDeleteBtn">DELETE STORY</string>
    <string name="cbcMainGetSaved">Get Saved Stories</string>
    <string name="ok">OK</string>
    <string name="cancel">NO</string>
    <string name="cbc_about_msg">Author: James Oresti \nVersion Number 1 \n Instructions: \n 1. To get new news stories click \"GET TOP NEWS STORIES\" in the top right of the screen. \n2. To save story, click on the story and then click Save story.  \n3. To view saved stories on the home screen click \"GET SAVED STORIES\". \n4. To delete a saved story, click on the story and then click the \"DELETE\" button. </string>
    <string name="cbc_search_bar">Search for key words in headline</string>
    <string name="cbc_delete_story_warning">Are you sure you\'d like to delete this story?</string>
    <string name="food_search_help_message">Search for a food in the bar and a list of foods from the Database will appear. Tap a food to find more info on that food.</string>
    <string name="routeActivitySnackBarClose">Close</string>
    <string name="routeInformationSnackBar">Route Information</string>
</resources>
